--- a/module-3/02_CSS_Selectors/exercise/style.css
+++ b/module-3/02_CSS_Selectors/exercise/style.css
@@ -9,9 +9,90 @@ html {
 
 body {
   background-color: rgba(192, 192, 192, 0.1);
+  
 }
 
 ul {
   margin: 0;
   padding: 0;
+}
+
+aside{
+  position: fixed;
+  border-right: 1px solid rgba(0, 173, 238, 0.4);
+  width: 200px;
+  height: 100vh;
+
+}
+
+aside > img{
+  height: 120px;
+  display:block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+main{
+  margin-left: 200px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+nav> ul> li{
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 173, 238, 0.4);
+  border-bottom-style: solid;
+  width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px;
+  list-style-type: none;
+}
+
+li > a{
+  font-weight: bold;
+  color: #00ADEE;
+  text-decoration: none;
+}
+
+li:first-child{
+  text-decoration: underline;
+}
+
+header > img{
+  height: 100px;
+  padding: 10px;
+}
+
+.banner{
+  width: 100%
+}
+
+section > div{
+  width: 33%;
+  display: inline-block;
+  border-right: 1px solid rgba(170, 239, 135, 0.8);
+  margin-top: 20px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+section> div > h2 {
+  color: #8CC36F;
+}
+
+section> div:last-child{
+  border: none;
+}
+
+h2 > i{
+  padding-bottom: 20px;
+  margin-right: 10px;
+}
+
+p{
+  padding-right: 10px;
+  padding-left: 8px;
 }
