--- a/module-3/05_Review_Day/review-exercise/styles.css
+++ b/module-3/05_Review_Day/review-exercise/styles.css
@@ -1,3 +1,8 @@
+body{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #87CEEB;
@@ -15,6 +20,7 @@ nav ul li {
     border-radius: 5px;
     text-align: center;
     line-height: 50px;
+    text-transform: uppercase;
 }
 
 header img {
