--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-2/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-2/style.css
@@ -1,11 +1,21 @@
+
 body {
   margin: 20px;
-  padding: 0
+  padding: 0;
+
 }
 
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex;
+}
+
+header > nav > ul{
+  display: flex;
+  justify-content: flex-start;
 }
 
 .logo {
@@ -16,6 +26,7 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  
 }
 
 li {
