--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-3/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-3/style.css
@@ -6,6 +6,15 @@ body {
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+
+header > nav{
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 .logo {
@@ -16,6 +25,8 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-content: center;
 }
 
 li {
