--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-4/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-1-headers/step-4/style.css
@@ -6,6 +6,14 @@ body {
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+header > nav {
+  display: flex;
+  flex-grow: 1;
+  justify-content: right;
 }
 
 .logo {
@@ -16,6 +24,9 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
+  justify-content: flex-end;
+  
 }
 
 li {
