--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-3/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-3/style.css
@@ -7,6 +7,8 @@ body {
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  display: flex;
+  align-items: flex-start;
 }
 
 .box {
@@ -15,4 +17,5 @@ body {
   color: #fff;
   border: solid 1px #777;
 }
+
 
