--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-4/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-3-align-vertically/step-4/style.css
@@ -7,6 +7,9 @@ body {
 .container {
   background-color: #F0F0F0;
   height: 500px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .box {
