--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-6-flex-order/step-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/set-6-flex-order/step-1/style.css
@@ -9,10 +9,15 @@ body {
   padding: 20px;
   margin-bottom: 20px;
   border: solid 1px #555;
+  display: flex;
 }
 
 .bio img {
   width: 150px;
   border-radius: 999px;
   margin: 0 10px;
+}
+
+.bio:nth-child(2) img{
+  order: 2;
 }
