--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-2/css/style.css
@@ -4,21 +4,35 @@ body {
   min-height: 100vh;
   /* Photo by Andre Furtado on Unsplash */
   background: url(../img/andre-furtado-JtV6zyOZSrA-unsplash.jpg) left / cover no-repeat;
+  display: flex;
 }
 
 #left-panel {
   background-color: #F7F7F7;
+  display: flex;
+  flex-direction: column;
+  flex-basis: 35%;
 }
 
 ul.social-icons {
   list-style-type: none;
   margin: 20px 20px;
   padding: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
-nav {}
+nav {
+  
+  flex-grow: 1;
+}
 
-#right-panel {}
+#right-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
 
 /* YOU WON'T NEED TO CHANGE ANY STYLES BELOW THIS LINE */
 
