--- a/module-3/04_CSS_Flexbox/exercise/exercise-part-1/style.css
+++ b/module-3/04_CSS_Flexbox/exercise/exercise-part-1/style.css
@@ -1,22 +1,32 @@
+
+
+
+
+
+
+
 body {
   margin: 20px;
   padding: 20px;
 }
 
 header {
-  text-align: center;;
+  text-align: center;
+  
 }
 
 ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+
 }
 
 li {
   font-size: 1.5rem;
   color: #707070;
   margin-left: 20px;
+
 }
 
 a,
