--- a/module-3/05_Review_Day/review-exercise/styles.css
+++ b/module-3/05_Review_Day/review-exercise/styles.css
@@ -1,7 +1,6 @@
 body{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    
+
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -11,6 +10,8 @@ body {
 nav ul {
     margin: 0;
     padding: 20px 0 0 0;
+    display: flex;
+    justify-content: space-between;
 }
 
 nav ul li {
@@ -21,7 +22,10 @@ nav ul li {
     text-align: center;
     line-height: 50px;
     text-transform: uppercase;
+    font-weight: bold;
+
 }
+
 
 header img {
     height: 100px;
@@ -37,6 +41,7 @@ main img {
     margin-right: 20px;
     height: 350px;
     width: 35%;
+    
 }
 
 main li:before {
@@ -60,4 +65,56 @@ main, section, footer {
     font-weight: bold;
     text-align: center;
     text-transform: uppercase;
+}
+
+body{
+    grid-gap: 6px;
+    margin: 8px 20px;
+}
+
+body#home{
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    grid-template-areas: 
+    "header header nav nav"
+    "main main main main"
+    "race race store store"
+    "footer footer footer footer";
+}
+
+body#contact {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-areas:
+    "header nav"
+    "main main"
+    "footer footer"
+}
+
+header{
+    grid-area: header;
+    display: flex;
+}
+
+nav{
+    grid-area: nav;
+}
+
+main{
+    grid-area: main;
+}
+#pop-race{
+    grid-area: race;
+}
+
+#get-refreshed{
+    grid-area: store;
+    
+}
+
+section img{
+    object-fit: contain;
+    width: fit-content;
+    height: fit-content;
+
 }
